--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-#+TITLE: Extracting data from the regional climate model MAR   
+#+TITLE: Extracting data from MAR   
 #+AUTHOR: Signe Hillerup Larsen
 #+EMAIL: shl@geus.dk
 #+DATE: {{{time(%Y-%m-%d)}}}
